--- a/languages/hotelier-wpml.pot
+++ b/languages/hotelier-wpml.pot
@@ -1,12 +1,12 @@
-# Copyright (C) 2017 WP Hotelier Multilingual
-# This file is distributed under the same license as the WP Hotelier Multilingual package.
+# Copyright (C) 2017 Easy WP Hotelier Multilingual
+# This file is distributed under the same license as the Easy WP Hotelier Multilingual package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Hotelier Multilingual\n"
+"Project-Id-Version: Easy WP Hotelier Multilingual\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language-Team: WP Hotelier <support@wphotelier.com>\n"
+"Language-Team: Easy WP Hotelier <support@wphotelier.com>\n"
 "Report-Msgid-Bugs-To: https://wphotelier.com\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-KeywordsList: __;_e;_ex:1,2c;_n:1,2;_n_noop:1,2;_nx:1,2,4c;_nx_noop:1,2,3c;_x:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
@@ -20,7 +20,7 @@ msgid "Cheatin&#8217; huh?"
 msgstr ""
 
 #: ../hotelier-wpml.php:159
-msgid "WP Hotelier Multilingual plugin is enabled but not effective. It requires %s and %s plugins in order to work."
+msgid "Easy WP Hotelier Multilingual plugin is enabled but not effective. It requires %s and %s plugins in order to work."
 msgstr ""
 
 #: ../hotelier-wpml.php:289
